--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+.navbar span a {
+  color: black;
+  text-decoration: none;
+}
+
 .content {
   margin-top: 60px;
 }
@@ -18,7 +23,6 @@
   transform: scale(1.05);
   transition: all .2s;
 }
-
 
 main {
   padding: 20px 0px;
